# reader-pdf-with-adobe-service

./: .gitignore  pyproject.toml
reading_pdf_with_adobe_service/: extract_tables_to_csv.py  finance.ipynb  main.py
